[package]
name = "docs"
version = "0.1.0"
authors = ["YIPG <around.mr.child@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "main"
path = "src/main.rs"