[package]
name = "tide-ex"
version = "0.1.0"
authors = ["yipg <around.mr.child@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.6.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]